nginx image root 수정
