# swagger/swagger-output.json
@@ -326,6 +326,13 @@
           "description": "가입된 유저 리스트를 출력한다.",
           "parameters": [
             {
+              "name": "page_no",
+              "description": "페이지 번호",
+              "in": "query",
+              "type": "number",
+              "required" : true
+            },
+            {
               "name": "user_name",
               "description": "유저 이름",
               "in": "query",
@@ -609,6 +616,13 @@
           "description": "사용자가 프로젝트를 조회한다.",
           "parameters" : [
             {
+              "name" : "page_no",
+              "description" : "페이지 번호",
+              "in" : "query",
+              "type" : "number",
+              "required" : true
+            },
+            {
               "name" : "user_id",
               "description" : "유저 아이디 값",
               "in" : "query",
@@ -639,7 +653,7 @@
         }
       },
       "/prj/detail": {
-        "post": {
+        "get": {
           "tags": [
             "prj"
           ],
@@ -647,15 +661,18 @@
           "description": "사용자가 특정 버전 정보를 조회한다.",
           "parameters" : [
             {
-              "name": "body",
-              "in": "body",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "prj_id": { "type": "number", "example" : 1, "required" : true},
-                  "version_number": { "type": "string", "example" : "v0.0.1", "required" : true}
-                }
-              }
+              "name" : "prj_id",
+              "description" : "프로젝트 번호",
+              "in" : "query",
+              "type" : "number",
+              "required" : true
+            },
+            {
+              "name" : "version_number",
+              "description" : "프로젝트 버전",
+              "in" : "query",
+              "type" : "string",
+              "required" : true
             }
           ],
           "responses": {
@@ -688,65 +705,27 @@
           }
         }
       },
-      "/prj/aprPrj": {
-        "put": {
+      "/prj/prjHst": {
+        "get": {
           "tags": [
             "prj"
           ],
-          "summary": "프로젝트 승인",
-          "description": "사용자가 프로젝트를 승인한다",
+          "summary": "특정 프로젝트 히스토리",
+          "description": "사용자가 특정 프로젝트 히스토리를 조회한다.",
           "parameters" : [
             {
-              "name": "prj_id",
-              "in": "formData",
-              "type": "number",
-              "required": true,
-              "example": "1"
+              "name" : "page_no",
+              "description" : "페이지 번호",
+              "in" : "query",
+              "type" : "number",
+              "required" : true
             },
             {
-              "name": "version_number",
-              "in": "formData",
-              "type": "string",
-              "required": true,
-              "example": "v0.0.1"
-            },
-            {
-              "name": "step_number",
-              "in": "formData",
-              "type": "number",
-              "required": true,
-              "example": 1
-            },
-            {
-              "name": "step_status",
-              "in": "formData",
-              "type": "string",
-              "required": true,
-              "example": "A"
-            },
-            {
-              "name": "step_req_list",
-              "in": "formData",
-              "type": "string",
-              "example": "[{'id' : 1, 'text' : '체크리스트 1'}]"
-            },
-            {
-              "name": "step_result_comment",
-              "in": "formData",
-              "type": "string", 
-              "example": "프로젝트 리스트를 보고 조치를 취해주세요."
-            },
-            {
-              "name": "step_result_url",
-              "in": "formData",
-              "type": "string",
-              "example": "https://naver.com"
-            },
-            {
-              "name": "file",
-              "in": "formData",
-              "type": "file",
-              "required": false
+              "name" : "prj_id",
+              "description" : "프로젝트 아이디",
+              "in" : "query",
+              "type" : "number",
+              "required" : true
             }
           ],
           "responses": {
@@ -761,89 +740,14 @@
                   },
                   "resultMsg": {
                     "type": "string",
-                    "example": "프로젝트 상태 변경 완료"
-                  }
-                },
-                "xml": {
-                  "name": "main"
-                }
-              }
-            }
-          }
-        }
-      },
-      "/prj/addComm": {
-        "post": {
-          "tags": [
-            "prj"
-          ],
-          "summary": "프로젝트 코멘트 남기기",
-          "description": "사용자가 프로젝트에 코멘트를 남긴다",
-          "parameters" : [
-            {
-              "name": "prj_id",
-              "in": "formData",
-              "type": "number",
-              "required": true,
-              "example": "1"
-            },
-            {
-              "name": "version_number",
-              "in": "formData",
-              "type": "string",
-              "required": true,
-              "example": "v0.0.1"
-            },
-            {
-              "name": "step_number",
-              "in": "formData",
-              "type": "number",
-              "required": true,
-              "example": 1
-            },
-            {
-              "name": "step_status",
-              "in": "formData",
-              "type": "string",
-              "required": true,
-              "example": "A"
-            },
-            {
-              "name": "step_result_comment",
-              "in": "formData",
-              "type": "string", 
-              "example": "프로젝트 리스트를 보고 조치를 취해주세요."
-            },
-            {
-              "name": "step_result_url",
-              "in": "formData",
-              "type": "string",
-              "example": "https://naver.com"
-            },
-            {
-              "name": "files",
-              "in": "formData",
-              "type": "array",
-              "items": {
-                  "type": "file"
-              },
-              "required": true,
-              "description": "여러 개의 파일을 업로드합니다."
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Success",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "resultCode": {
-                    "type": "number",
-                    "example": 200
+                    "example": "프로젝트 생성 완료"
                   },
-                  "resultMsg": {
-                    "type": "string",
-                    "example": "프로젝트 상태 변경 완료"
+                  "data": {
+                    "type": "object",
+                    "properties": {
+                      "resultCode" : { "type" : "number", "example" : 200 },
+                      "resultMsg" : { "type" : "string", "example" : "프로젝트 생성 완료"}
+                    }
                   }
                 },
                 "xml": {
